# nn_universe

./: .gitignore  Mind.toml  README.md  ewc_results.json  experiment_pytorch.py  experiment_training.mind  pyproject.toml  requirements.txt  run_all.sh  scaling_experiment_extended.py  scaling_results.json
.arch-mind/: baseline_scan.json  rules.mind  sidecar_baseline.json
docs/: ROADMAP.md  claim_manifest.json  cluster_roadmap_v12.md  cover_letter.md  fim_tier_hierarchy_neurips2026.md  fim_tier_hierarchy_neurips2026_v10_baseline.md  findings.md  h200_cluster_runbook.md  honest_framing_audit_2026-05-08.md  linkedin_post_v8.md  moire_superspace_analogue_2026-05-08.md  neurips_reproducibility_checklist.md  paper_draft.md  preregistration_v2.md  preregistration_v3.md  references.bib  results_summary.md  submission_checklist.md  tmlr_cover_letter.md  tmlr_cover_letter_v11_5.md  v1_1_ntk_continuum_limit.md  v1_1_ntk_gap_closure.md  v2_0_lattice_embedded.md  v3_0_cluster_recipe.md  v3_1_alpha_drift_prediction.md  v3_2_cosmological_constant.md  v3_3_cluster_amplification.md  v3_4_dark_sector.md  v4_1_init_vs_learning.md  v4_3_methodology_corrections.md  v6_0_mechanism_hanin_nica.md  v6_summary.md
experiments/: v12_probe_convergence_large.py  visualize.py
plots/: generate_v2_paper_figures.py
scripts/: build_trimmed.sh  reproduce_main_results.sh  run_v12_cluster.sh  scrub_history_NOTE.md
tests/: conftest.py  test_alpha_mock.py  test_analyze.py  test_decoder.py  test_integration.py  test_lattice.py  test_scaling_fit.py  test_toric_code.py  test_v4_learning_baselines.py  (+6 more)
(+166 files in other folders)
